infra/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ticket-platform
  labels:
    app: ticket-platform
    env: production
