infra/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ticket-backend
  namespace: ticket-platform
  labels:
    app: ticket-backend
spec:
  type: ClusterIP
  selector:
    app: ticket-backend
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http

---
apiVersion: v1
kind: Service
metadata:
  name: ticket-frontend
  namespace: ticket-platform
  labels:
    app: ticket-frontend
spec:
  type: ClusterIP
  selector:
    app: ticket-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
