infra/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ticket-ingress
  namespace: ticket-platform
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rate-limit: "100"
    nginx.ingress.kubernetes.io/rate-limit-window: "1m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - tickets.sanadatech.com
        - api.tickets.sanadatech.com
      secretName: ticket-tls
  rules:
    - host: tickets.sanadatech.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ticket-frontend
                port:
                  number: 80
    - host: api.tickets.sanadatech.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ticket-backend
                port:
                  number: 3000
